test/compile-fail/resolution/use/no-name-root-path/expected.txt
error: unresolved crate `c`
 --> top.rhdl:6:14
  |
6 |         use ::c::d;
  |               ^ no `c` crate
